[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf", "gfx"]
